--- a/project.json
+++ b/project.json
@@ -8,6 +8,10 @@
     "UiPath.System.Activities": "[20.4.0]",
     "UiPath.UIAutomation.Activities": "[20.4.2]"
   },
+   "frameworks": {
+    "dnc451": { },
+    "dnxcore50": { }
+  },
   "webServices": [],
   "schemaVersion": "4.0",
   "studioVersion": "20.4.3.0",
