--- a/project.json
+++ b/project.json
@@ -8,6 +8,9 @@
     "UiPath.System.Activities": "[20.4.0]",
     "UiPath.UIAutomation.Activities": "[20.4.2]"
   },
+  "TargetFrameworkIdentifier":".NETCoreApp",
+  "TargetFrameworkVersion":"3.1",
+  "FrameworkName":"Microsoft.AspNetCore.App"
   "webServices": [],
   "schemaVersion": "4.0",
   "studioVersion": "20.4.3.0",
