--- a/project.json
+++ b/project.json
@@ -10,7 +10,7 @@
   },
   "TargetFrameworkIdentifier":".NETCoreApp",
   "TargetFrameworkVersion":"3.1",
-  "FrameworkName":"Microsoft.AspNetCore.App"
+  "FrameworkName":"Microsoft.AspNetCore.App",
   "webServices": [],
   "schemaVersion": "4.0",
   "studioVersion": "20.4.3.0",
