--- a/project.json
+++ b/project.json
@@ -8,9 +8,18 @@
     "UiPath.System.Activities": "[20.4.0]",
     "UiPath.UIAutomation.Activities": "[20.4.2]"
   },
-  "TargetFrameworkIdentifier":".NETCoreApp",
-  "TargetFrameworkVersion":"3.1",
-  "FrameworkName":"Microsoft.AspNetCore.App",
+  "frameworks": {
+    "net451": { },
+    "dotnet5.4": {
+      "dependencies": {
+        "Microsoft.CSharp": "4.0.1-beta-23516",
+        "System.Collections": "4.0.11-beta-23516",
+        "System.Linq": "4.0.1-beta-23516",
+        "System.Runtime": "4.0.21-beta-23516",
+        "System.Threading": "4.0.11-beta-23516"
+      }
+    }
+  }
   "webServices": [],
   "schemaVersion": "4.0",
   "studioVersion": "20.4.3.0",
